--- a/index.html
+++ b/index.html
@@ -1,225 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RINUO - Interactive Brand Banner</title>
-<style>
-body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  overflow-x: hidden;
-  background: #0a0a0a;
-  transition: background 10s linear;
-}
-
-/* header */
-header {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-
-/* 粒子画布 */
-#particles, #glowParticles, #trailCanvas {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-}
-
-/* Logo */
-.logo {
-  width: 140px;
-  height: 140px;
-  background: url('https://via.placeholder.com/140x140.png?text=R') no-repeat center/contain;
-  border-radius: 50%;
-  position: relative;
-  z-index: 2;
-  box-shadow: 0 0 30px #fff, 0 0 60px #4f9cf9;
-  animation: logoGlow 2s ease-in-out infinite alternate;
-}
-@keyframes logoGlow {
-  0% { transform: scale(1); box-shadow: 0 0 30px #fff,0 0 60px #4f9cf9; }
-  100% { transform: scale(1.15); box-shadow: 0 0 60px #fff,0 0 120px #4f9cf9; }
-}
-
-h1 {
-  margin: 20px 0;
-  font-size: 4rem;
-  letter-spacing: 8px;
-  text-shadow: 0 2px 20px rgba(0,0,0,0.5);
-  z-index: 2;
-  position: relative;
-}
-
-/* Slogans */
-.slogans {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  align-items: center;
-  z-index: 2;
-  position: relative;
-}
-.slogan {
-  font-size: 2rem;
-  font-weight: 700;
-  opacity: 0;
-  transform: translateY(40px);
-  animation: fadeUp 1s forwards;
-  cursor: default;
-  background: linear-gradient(90deg,#fff,#4f9cf9,#fffb7d);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  position: relative;
-}
-.slogan:nth-child(1){ animation-delay: 0.3s;}
-.slogan:nth-child(2){ animation-delay: 0.6s;}
-.slogan:nth-child(3){ animation-delay: 0.9s;}
-.slogan:nth-child(4){ animation-delay: 1.2s;}
-.slogan:nth-child(5){ animation-delay: 1.5s;}
-.slogan:hover { transform: scale(1.2) translateY(-5px); transition: all 0.4s ease; }
-
-@keyframes fadeUp {
-  to { opacity: 1; transform: translateY(0); }
-}
-
-footer {
-  text-align: center;
-  padding: 20px;
-  font-size: 0.9rem;
-  color: #ccc;
-  background: #111;
-}
-
-/* 响应式 */
-@media (max-width: 600px){
-  h1 { font-size: 2.2rem; letter-spacing: 3px; }
-  .slogan { font-size: 1.2rem; }
-  .logo { width: 90px; height: 90px; }
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>丰富免费技术资源导航</title>
+  <style>
+    :root {
+      --bg: #f9f9f9;
+      --card: #fff;
+      --fg: #333;
+      --muted: #666;
+      --accent: #007ACC;
+    }
+    body { margin:0; padding:20px; background:var(--bg); font-family:Arial, sans-serif; color:var(--fg); }
+    header { text-align:center; margin-bottom:40px; }
+    h1 { color:var(--accent); }
+    main { max-width:1000px; margin:0 auto; }
+    .section { background:var(--card); border-radius:8px; padding:20px; margin-bottom:30px; box-shadow:0 2px 4px rgba(0,0,0,0.1); }
+    .section h2 { color:var(--accent); }
+    ul { padding-left:20px; }
+    li { margin-bottom:8px; }
+    a { color:var(--accent); text-decoration:none; }
+    a:hover { text-decoration:underline; }
+    footer { text-align:center; color:var(--muted); margin-top:40px; font-size:14px; }
+  </style>
 </head>
 <body>
+
 <header>
-  <canvas id="particles"></canvas>
-  <canvas id="glowParticles"></canvas>
-  <canvas id="trailCanvas"></canvas>
-  <div class="logo"></div>
-  <h1>RINUO</h1>
-  <div class="slogans">
-    <div class="slogan">Real Innovation</div>
-    <div class="slogan">Rise & Own</div>
-    <div class="slogan">Reach New</div>
-    <div class="slogan">Trust. Act.</div>
-    <div class="slogan">Simply Reliable</div>
-  </div>
+  <h1>丰富免费技术资源导航</h1>
+  <p>这里帮你汇总了一份丰富免费技术资源清单，涵盖后端 API、前端工具、代码平台、教程资源等，非常适合长期学习和项目实践。并附上相关来源链接，方便你直接发布或集成到导航页面。</p>
 </header>
-<footer>© 2025 RINUO. All rights reserved.</footer>
 
-<script>
-// 背景渐变动态
-let hue = 200;
-setInterval(() => {
-  hue += 0.3;
-  document.body.style.background = `hsl(${hue}, 20%, 5%)`;
-}, 50);
+<main>
+  <div class="section">
+    <h2>1. 免费后端 API & 模拟接口</h2>
+    <ul>
+      <li><a href="https://github.com/public-apis/public-apis" target="_blank">Public APIs</a> – 大量免费公共 API 索引，涵盖天气、游戏、新闻等  [oai_citation:0‡GitHub](https://github.com/public-apis/public-apis?utm_source=chatgpt.com)</li>
+      <li><a href="https://faux-api.com/" target="_blank">Faux API</a> – 免费 mock 后端，无需注册即可测试前端</li>
+      <li><a href="https://reqres.in/" target="_blank">ReqRes</a> – 测试用 REST API，适合模拟用户/帖子接口</li>
+      <li><a href="https://www.reddit.com/r/dataengineering/comments/1epvzf9/free_apis_for_personal_projects/" target="_blank">Reddit 推荐 API</a> – 包括 NASA、SWAPI 等公共数据集接口  [oai_citation:1‡Reddit](https://www.reddit.com/r/dataengineering/comments/1epvzf9/free_apis_for_personal_projects/?utm_source=chatgpt.com)</li>
+    </ul>
+  </div>
 
-// 粒子
-const canvas = document.getElementById('particles');
-const ctx = canvas.getContext('2d');
-const glowCanvas = document.getElementById('glowParticles');
-const glowCtx = glowCanvas.getContext('2d');
-const trailCanvas = document.getElementById('trailCanvas');
-const trailCtx = trailCanvas.getContext('2d');
+  <div class="section">
+    <h2>2. 免费 Serverless / 后端平台</h2>
+    <ul>
+      <li><a href="https://free-for.dev/" target="_blank">Free-for-devs</a> – 汇总多类免费开发服务和平台  [oai_citation:2‡Free for Developers](https://free-for.dev/?utm_source=chatgpt.com)</li>
+      <li><a href="https://freestuff.dev/tags/serverless" target="_blank">freeStuff.dev - Serverless</a> – 包括 AWS Lambda、Cloudflare Workers、Appwrite 等服务  [oai_citation:3‡FreeStuff](https://freestuff.dev/tags/serverless?utm_source=chatgpt.com)</li>
+      <li><a href="https://gist.github.com/hashirahmad/8df502f8d9e3b01f7998c55c22447c4f" target="_blank">Always Free Cloud Platforms</a> – 包括 Heroku、Fly.io、Cloudflare Workers 等  [oai_citation:4‡Gist](https://gist.github.com/hashirahmad/8df502f8d9e3b01f7998c55c22447c4f?utm_source=chatgpt.com)</li>
+    </ul>
+  </div>
 
-let w = canvas.width = glowCanvas.width = trailCanvas.width = window.innerWidth;
-let h = canvas.height = glowCanvas.height = trailCanvas.height = window.innerHeight;
+  <div class="section">
+    <h2>3. 免费工具与平台</h2>
+    <ul>
+      <li><a href="https://freestuff.dev/" target="_blank">FreeStuff.dev</a> – 面向开发者的免费工具集，适合MVP与原型开发  [oai_citation:5‡FreeStuff](https://freestuff.dev/?utm_source=chatgpt.com)</li>
+      <li><a href="https://faun.pub/18-sites-to-host-your-backend-code-for-free-d3463a814b93" target="_blank">免费后端托管平台</a> – 包括 Vercel、Glitch、Fly.io 等  [oai_citation:6‡FAUN.dev  —  Developer Community](https://faun.pub/18-sites-to-host-your-backend-code-for-free-d3463a814b93?utm_source=chatgpt.com)</li>
+      <li><a href="https://dev.to/crafting-code/150-free-resources-every-developer-needs-to-know-21l3" target="_blank">150+ 免费资源</a> – 包含 API、工具、学习平台等大全  [oai_citation:7‡DEV Community](https://dev.to/crafting-code/150-free-resources-every-developer-needs-to-know-21l3?utm_source=chatgpt.com)</li>
+    </ul>
+  </div>
 
-const particles = [];
-const numParticles = 120;
-for(let i=0;i<numParticles;i++){
-  particles.push({
-    x: Math.random()*w,
-    y: Math.random()*h,
-    r: Math.random()*2+1,
-    speedX: (Math.random()-0.5)*0.7,
-    speedY: (Math.random()-0.5)*0.7,
-    alpha: Math.random()*0.5+0.2
-  });
-}
+  <div class="section">
+    <h2>4. 教程与学习平台</h2>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/FreeCodeCamp" target="_blank">FreeCodeCamp</a> – 免费前后端课程与项目实践平台  [oai_citation:8‡Wikipedia](https://en.wikipedia.org/wiki/FreeCodeCamp?utm_source=chatgpt.com)</li>
+      <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a> – 提供前端基础教程与在线代码编辑器  [oai_citation:9‡Wikipedia](https://en.wikipedia.org/wiki/W3Schools?utm_source=chatgpt.com)</li>
+    </ul>
+  </div>
 
-// 鼠标拖尾
-const trail = [];
-document.addEventListener('mousemove', (e)=>{
-  trail.push({x:e.clientX, y:e.clientY, alpha:1});
-});
+  <div class="section">
+    <h2>5. 开源软件与 IDE</h2>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/List_of_free_and_open-source_software_packages" target="_blank">FOSS 软件列表</a> – 包含 Web 服务、自托管平台、语言与编辑器等  [oai_citation:10‡Wikipedia](https://en.wikipedia.org/wiki/List_of_free_and_open-source_software_packages?utm_source=chatgpt.com)</li>
+    </ul>
+  </div>
 
-function animate(){
-  ctx.clearRect(0,0,w,h);
-  glowCtx.clearRect(0,0,w,h);
-  trailCtx.clearRect(0,0,w,h);
+</main>
 
-  // 背景粒子
-  particles.forEach(p=>{
-    p.x += p.speedX;
-    p.y += p.speedY;
-    if(p.x<0||p.x>w) p.speedX*=-1;
-    if(p.y<0||p.y>h) p.speedY*=-1;
-
-    ctx.beginPath();
-    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-    ctx.fillStyle = `rgba(255,255,255,${p.alpha})`;
-    ctx.fill();
-
-    glowCtx.beginPath();
-    glowCtx.arc(p.x,p.y,p.r*2,0,Math.PI*2);
-    glowCtx.fillStyle = `rgba(79,156,249,${p.alpha*0.6})`;
-    glowCtx.fill();
-  });
-
-  // 鼠标拖尾
-  for(let i=0;i<trail.length;i++){
-    let t = trail[i];
-    trailCtx.beginPath();
-    trailCtx.arc(t.x,t.y,4,0,Math.PI*2);
-    trailCtx.fillStyle = `rgba(255,255,255,${t.alpha})`;
-    trailCtx.fill();
-    t.alpha -= 0.02;
-    if(t.alpha<=0) trail.splice(i,1), i--;
-  }
-
-  requestAnimationFrame(animate);
-}
-animate();
-
-// Slogan漂浮
-const slogans = document.querySelectorAll('.slogan');
-let floatOffset = 0;
-function floatText(){
-  floatOffset += 0.03;
-  slogans.forEach((s,i)=>{
-    s.style.transform = `translateY(${Math.sin(floatOffset+i)*5}px)`;
-  });
-  requestAnimationFrame(floatText);
-}
-floatText();
-
-window.addEventListener('resize',()=>{
-  w = canvas.width = glowCanvas.width = trailCanvas.width = window.innerWidth;
-  h = canvas.height = glowCanvas.height = trailCanvas.height = window.innerHeight;
-});
-</script>
+<footer>
+  欢迎反馈与补充。页面更新日期：2025-08-29
+</footer>
 <script type="module" src="https://www.gaoxueya.com/scripts/stats.js?domain=www.rinuo.com&v=20250801"></script>
 </body>
 </html>
