--- a/index.html
+++ b/index.html
@@ -1,86 +1,68 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>丰富免费技术资源导航</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>免费资源导航首页</title>
   <style>
-    :root {
-      --bg: #f9f9f9;
-      --card: #fff;
-      --fg: #333;
-      --muted: #666;
-      --accent: #007ACC;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
     }
-    body { margin:0; padding:20px; background:var(--bg); font-family:Arial, sans-serif; color:var(--fg); }
-    header { text-align:center; margin-bottom:40px; }
-    h1 { color:var(--accent); }
-    main { max-width:1000px; margin:0 auto; }
-    .section { background:var(--card); border-radius:8px; padding:20px; margin-bottom:30px; box-shadow:0 2px 4px rgba(0,0,0,0.1); }
-    .section h2 { color:var(--accent); }
-    ul { padding-left:20px; }
-    li { margin-bottom:8px; }
-    a { color:var(--accent); text-decoration:none; }
-    a:hover { text-decoration:underline; }
-    footer { text-align:center; color:var(--muted); margin-top:40px; font-size:14px; }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    .category-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .category-item {
+      background-color: #fff;
+      margin: 10px 0;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .category-item a {
+      text-decoration: none;
+      color: #007bff;
+      font-size: 18px;
+    }
+    .category-item a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>丰富免费技术资源导航</h1>
-  <p>这里帮你汇总了一份丰富免费技术资源清单，涵盖后端 API、前端工具、代码平台、教程资源等，非常适合长期学习和项目实践。并附上相关来源链接，方便你直接发布或集成到导航页面。</p>
-</header>
+  <h1>免费资源导航首页</h1>
 
-<main>
-  <div class="section">
-    <h2>1. 免费后端 API & 模拟接口</h2>
-    <ul>
-      <li><a href="https://github.com/public-apis/public-apis" target="_blank">Public APIs</a> – 大量免费公共 API 索引，涵盖天气、游戏、新闻等  [oai_citation:0‡GitHub](https://github.com/public-apis/public-apis?utm_source=chatgpt.com)</li>
-      <li><a href="https://faux-api.com/" target="_blank">Faux API</a> – 免费 mock 后端，无需注册即可测试前端</li>
-      <li><a href="https://reqres.in/" target="_blank">ReqRes</a> – 测试用 REST API，适合模拟用户/帖子接口</li>
-      <li><a href="https://www.reddit.com/r/dataengineering/comments/1epvzf9/free_apis_for_personal_projects/" target="_blank">Reddit 推荐 API</a> – 包括 NASA、SWAPI 等公共数据集接口  [oai_citation:1‡Reddit](https://www.reddit.com/r/dataengineering/comments/1epvzf9/free_apis_for_personal_projects/?utm_source=chatgpt.com)</li>
-    </ul>
-  </div>
+  <ul class="category-list">
+    <li class="category-item"><a href="free/vps.html">免费 VPS / 云服务器</a></li>
+    <li class="category-item"><a href="free/domain.html">免费域名 / 子域名</a></li>
+    <li class="category-item"><a href="free/api.html">免费 API 接口</a></li>
+    <li class="category-item"><a href="free/database.html">免费数据库服务</a></li>
+    <li class="category-item"><a href="free/cdn.html">免费 CDN / 静态资源托管</a></li>
+    <li class="category-item"><a href="free/storage.html">免费存储服务</a></li>
+    <li class="category-item"><a href="free/email.html">免费邮件服务</a></li>
+    <li class="category-item"><a href="free/sms.html">免费短信 / 通知服务</a></li>
+    <li class="category-item"><a href="free/image.html">免费图像处理 API</a></li>
+    <li class="category-item"><a href="free/voice.html">免费语音识别 / 合成 API</a></li>
+    <li class="category-item"><a href="free/payment.html">免费支付接口</a></li>
+    <li class="category-item"><a href="free/translate.html">免费翻译 API</a></li>
+    <li class="category-item"><a href="free/weather.html">免费天气数据 API</a></li>
+    <li class="category-item"><a href="free/map.html">免费地图 / 地理定位 API</a></li>
+    <li class="category-item"><a href="free/captcha.html">免费验证码服务</a></li>
+    <li class="category-item"><a href="free/icons.html">免费图标 / 字体资源</a></li>
+    <li class="category-item"><a href="free/devtools.html">免费开发者工具</a></li>
+    <li class="category-item"><a href="free/cicd.html">免费 CI/CD 工具</a></li>
+    <li class="category-item"><a href="free/monitor.html">免费监控 / 日志服务</a></li>
+    <li class="category-item"><a href="free/websocket.html">免费 WebSocket 服务</a></li>
+  </ul>
 
-  <div class="section">
-    <h2>2. 免费 Serverless / 后端平台</h2>
-    <ul>
-      <li><a href="https://free-for.dev/" target="_blank">Free-for-devs</a> – 汇总多类免费开发服务和平台  [oai_citation:2‡Free for Developers](https://free-for.dev/?utm_source=chatgpt.com)</li>
-      <li><a href="https://freestuff.dev/tags/serverless" target="_blank">freeStuff.dev - Serverless</a> – 包括 AWS Lambda、Cloudflare Workers、Appwrite 等服务  [oai_citation:3‡FreeStuff](https://freestuff.dev/tags/serverless?utm_source=chatgpt.com)</li>
-      <li><a href="https://gist.github.com/hashirahmad/8df502f8d9e3b01f7998c55c22447c4f" target="_blank">Always Free Cloud Platforms</a> – 包括 Heroku、Fly.io、Cloudflare Workers 等  [oai_citation:4‡Gist](https://gist.github.com/hashirahmad/8df502f8d9e3b01f7998c55c22447c4f?utm_source=chatgpt.com)</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>3. 免费工具与平台</h2>
-    <ul>
-      <li><a href="https://freestuff.dev/" target="_blank">FreeStuff.dev</a> – 面向开发者的免费工具集，适合MVP与原型开发  [oai_citation:5‡FreeStuff](https://freestuff.dev/?utm_source=chatgpt.com)</li>
-      <li><a href="https://faun.pub/18-sites-to-host-your-backend-code-for-free-d3463a814b93" target="_blank">免费后端托管平台</a> – 包括 Vercel、Glitch、Fly.io 等  [oai_citation:6‡FAUN.dev  —  Developer Community](https://faun.pub/18-sites-to-host-your-backend-code-for-free-d3463a814b93?utm_source=chatgpt.com)</li>
-      <li><a href="https://dev.to/crafting-code/150-free-resources-every-developer-needs-to-know-21l3" target="_blank">150+ 免费资源</a> – 包含 API、工具、学习平台等大全  [oai_citation:7‡DEV Community](https://dev.to/crafting-code/150-free-resources-every-developer-needs-to-know-21l3?utm_source=chatgpt.com)</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>4. 教程与学习平台</h2>
-    <ul>
-      <li><a href="https://en.wikipedia.org/wiki/FreeCodeCamp" target="_blank">FreeCodeCamp</a> – 免费前后端课程与项目实践平台  [oai_citation:8‡Wikipedia](https://en.wikipedia.org/wiki/FreeCodeCamp?utm_source=chatgpt.com)</li>
-      <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a> – 提供前端基础教程与在线代码编辑器  [oai_citation:9‡Wikipedia](https://en.wikipedia.org/wiki/W3Schools?utm_source=chatgpt.com)</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>5. 开源软件与 IDE</h2>
-    <ul>
-      <li><a href="https://en.wikipedia.org/wiki/List_of_free_and_open-source_software_packages" target="_blank">FOSS 软件列表</a> – 包含 Web 服务、自托管平台、语言与编辑器等  [oai_citation:10‡Wikipedia](https://en.wikipedia.org/wiki/List_of_free_and_open-source_software_packages?utm_source=chatgpt.com)</li>
-    </ul>
-  </div>
-
-</main>
-
-<footer>
-  欢迎反馈与补充。页面更新日期：2025-08-29
-</footer>
-<script type="module" src="https://www.gaoxueya.com/scripts/stats.js?domain=www.rinuo.com&v=20250801"></script>
 </body>
 </html>
