--- a/free/database.html
+++ b/free/database.html
@@ -497,6 +497,19 @@
         </div>
       </div>
     </div>
+
+    <!-- 资源贡献区域 -->
+    <div class="bg-white rounded-xl border border-gray-100 p-5 md:p-6 mb-8 shadow-sm">
+      <h3 class="text-xl font-bold mb-4 flex items-center">
+        <i class="fa fa-github text-primary mr-2"></i>贡献资源
+      </h3>
+      <p class="text-muted mb-4">
+        发现了不错的免费数据库服务？想要补充或更新现有资源信息？欢迎通过GitHub仓库提交贡献！
+      </p>
+      <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-4 py-2 rounded-lg transition-colors">
+        <i class="fa fa-github mr-2"></i> 访问GitHub仓库
+      </a>
+    </div>
   </main>
 
   <!-- 页脚 -->
@@ -624,3 +637,4 @@
   </script>
 </body>
 </html>
+    
