--- a/free/database.html
+++ b/free/database.html
@@ -66,7 +66,7 @@
       <div class="hidden md:flex items-center space-x-6">
         <a href="../index.html" class="text-dark hover:text-primary transition-colors">首页</a>
         <a href="#" class="text-muted hover:text-primary transition-colors">资源分类</a>
-        <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
+        <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
         <a href="#" class="text-muted hover:text-primary transition-colors">关于我们</a>
@@ -83,7 +83,7 @@
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
         <a href="../index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
         <a href="#" class="py-2 text-muted hover:text-primary transition-colors">资源分类</a>
-        <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
+        <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
         <a href="#" class="py-2 text-muted hover:text-primary transition-colors">关于我们</a>
@@ -240,7 +240,7 @@
               <span class="tool-tag bg-success/10 text-success">免费计划</span>
             </div>
             <p class="text-muted text-sm mb-3">免费PostgreSQL数据库，与Heroku平台无缝集成，适合应用开发测试和小型项目</p>
-            <div class="flex flex-wrap gap-2 mb-3">
+            <div class="flex flex-wrap gap-2 mb-3"><div class="flex flex-wrap gap-2 mb-3">
               <span class="tool-tag bg-blue-100 text-blue-800 text-[10px]">PostgreSQL</span>
               <span class="tool-tag bg-purple-100 text-purple-800 text-[10px]">平台集成</span>
             </div>
@@ -362,7 +362,7 @@
           </div>
           
           <!-- 服务卡片2 -->
-          <div class="border border-gray-100 rounded-lg p-4 card-hover">
+          <div class="border border-gray-100 rounded-lg p-4 card-hover"><div class="border border-gray-100 rounded-lg p-4 card-hover">
             <div class="flex justify-between items-start mb-2">
               <h5 class="font-medium">PlanetScale</h5>
               <span class="tool-tag bg-success/10 text-success">免费计划</span>
@@ -504,10 +504,10 @@
         <i class="fa fa-github text-primary mr-2"></i>贡献资源
       </h3>
       <p class="text-muted mb-4">
-        发现了不错的免费数据库服务？想要补充或更新现有资源信息？欢迎通过GitHub仓库提交贡献！
+        发现了不错的免费数据库服务？想要补充或更新现有资源信息？欢迎通过GitHub issues提交贡献！
       </p>
-      <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-4 py-2 rounded-lg transition-colors">
-        <i class="fa fa-github mr-2"></i> 访问GitHub仓库
+      <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-4 py-2 rounded-lg transition-colors">
+        <i class="fa fa-github mr-2"></i> 提交issue
       </a>
     </div>
   </main>
@@ -545,7 +545,7 @@
             <li><a href="../index.html" class="text-gray-400 hover:text-white transition-colors">首页</a></li>
             <li><a href="#" class="text-gray-400 hover:text-white transition-colors">资源分类</a></li>
             <li>
-              <a href="https://github.com/guomengtao/rinuo.com" target="_blank" class="text-gray-400 hover:text-white transition-colors flex items-center">
+              <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-gray-400 hover:text-white transition-colors flex items-center">
                 <i class="fa fa-github mr-1"></i> 提交资源
               </a>
             </li>
