--- a/subscribe.html
+++ b/subscribe.html
@@ -285,9 +285,11 @@
 
     <!-- JavaScript -->
     <script>
-        // Supabase配置 (替换为你的项目信息)
-        const SUPABASE_URL = "https://你的项目ID.supabase.co";
-        const SUPABASE_KEY = "你的anon公钥";
+ 
+
+        // 从GitHub Actions Secrets注入的环境变量中获取Supabase配置
+        const SUPABASE_URL = window.SUPABASE_CONFIG.url;
+        const SUPABASE_KEY = window.SUPABASE_CONFIG.key;
         
         // 初始化Supabase客户端
         const supabase = window.supabase ? window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY) : null;
