--- a/free/websocket.html
+++ b/free/websocket.html
@@ -38,8 +38,12 @@
         content-visibility: auto;
       }
       .card-hover {
-        @apply transition-all duration-300 hover:shadow-lg hover:border-primary/30 hover:-translate-y-1;
-      }
+                transition: all 0.3s ease;
+            }
+            .card-hover:hover {
+                box-shadow: 0 10px 30px rgba(22, 93, 255, 0.2);
+                transform: translateY(-0.25rem);
+            }
       .scrollbar-hide::-webkit-scrollbar {
         display: none;
       }
