--- a/free/email.html
+++ b/free/email.html
@@ -494,10 +494,47 @@
           'gmx-mail': '界面广告较多；国内访问速度一般；反垃圾策略较严格'
         };
 
-        // 加载email.json数据
-        const response = await fetch('/assets/data/email.json', { cache: 'no-cache' });
-        if (!response.ok) throw new Error('邮件服务数据加载失败');
-        const emailData = await response.json();
+        // 邮件服务数据 - 直接嵌入，无需外部JSON
+        const emailData = {
+          "schemaVersion": 1,
+          "category": "email",
+          "updatedAt": "2025-08-31",
+          "subcategories": [
+            {
+              "slug": "personal",
+              "name": "个人邮箱",
+              "items": [
+                {"id": "gmail", "title": "Gmail", "description": "Google 邮箱，送达率高，SMTP 可用。", "url": "https://mail.google.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "稳定", "个人"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "outlook", "title": "Outlook", "description": "微软邮箱，SMTP 可用且稳定。", "url": "https://outlook.live.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "稳定", "个人"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "yahoo-mail", "title": "Yahoo Mail", "description": "雅虎邮箱，支持应用专用密码，SMTP 可用。", "url": "https://www.yahoo.com/mail", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "个人"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "qq-mail", "title": "QQ 邮箱", "description": "国内常用邮箱，需开启 SMTP/POP3。", "url": "https://mail.qq.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "国内"], "updatedAt": "2025-08-29", "region": "cn"},
+                {"id": "netease-mail", "title": "网易邮箱", "description": "国内常用邮箱，需开启 SMTP。", "url": "https://www.163.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "国内"], "updatedAt": "2025-08-29", "region": "cn"},
+                {"id": "gmx-mail", "title": "GMX Mail", "description": "国外免费邮箱，SMTP 可用。", "url": "https://www.gmx.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "个人"], "updatedAt": "2025-08-29", "region": "global"}
+              ]
+            },
+            {
+              "slug": "enterprise",
+              "name": "企业/自定义域",
+              "items": [
+                {"id": "zoho-mail", "title": "Zoho Mail", "description": "企业邮箱服务，支持自定义域名，免费版有限制。", "url": "https://www.zoho.com/mail/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "企业", "自定义域"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "yandex-mail", "title": "Yandex Mail", "description": "俄罗斯邮箱服务，支持自定义域名，SMTP 可用。", "url": "https://mail.yandex.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "企业", "自定义域"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "mailgun", "title": "Mailgun", "description": "邮件发送服务，提供免费额度，适合开发者。", "url": "https://www.mailgun.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "API", "开发者"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "sendgrid", "title": "SendGrid", "description": "邮件发送服务，免费版每月可发送 100 封邮件。", "url": "https://sendgrid.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "API", "开发者"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "mailjet", "title": "Mailjet", "description": "邮件营销服务，免费版每月可发送 200 封邮件。", "url": "https://www.mailjet.com/", "isFree": true, "isOpenSource": false, "tags": ["SMTP", "营销", "模板"], "updatedAt": "2025-08-29", "region": "global"}
+              ]
+            },
+            {
+              "slug": "temporary",
+              "name": "临时邮箱",
+              "items": [
+                {"id": "yopmail", "title": "YOPmail", "description": "临时邮箱服务，无需注册，适合临时使用。", "url": "https://yopmail.com/", "isFree": true, "isOpenSource": false, "tags": ["临时", "无需注册"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "10minutemail", "title": "10 Minute Mail", "description": "10分钟临时邮箱，自动销毁，适合测试。", "url": "https://10minutemail.com/", "isFree": true, "isOpenSource": false, "tags": ["临时", "自动销毁"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "guerrillamail", "title": "Guerrilla Mail", "description": "一次性临时邮箱，支持多种域名。", "url": "https://www.guerrillamail.com/", "isFree": true, "isOpenSource": false, "tags": ["临时", "一次性"], "updatedAt": "2025-08-29", "region": "global"},
+                {"id": "tempmail", "title": "Temp Mail", "description": "临时邮箱服务，支持多种语言。", "url": "https://temp-mail.org/", "isFree": true, "isOpenSource": false, "tags": ["临时", "多语言"], "updatedAt": "2025-08-29", "region": "global"}
+              ]
+            }
+          ]
+        };
         
         // 更新最后更新时间
         document.getElementById('lastUpdated').textContent = emailData.updatedAt || '未知';
